--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,6 @@ h3 {
 
 h1 {
   font-size: 96px;
-  padding-top: 100px;
 }
 
 h2 {
@@ -89,7 +88,11 @@ p {
   text-decoration: underline;
 }
 
-@media (max-width: 600px) {
+.primary-link:hover {
+  color: white;
+}
+
+@media (max-width: 576px) {
   body {
     padding: 0 10px 0 10px;
     text-align: center;
@@ -103,5 +106,24 @@ p {
 
   img {
     display: none;
+  }
+  h1 {
+    font-size: 48px;
+    line-height: 1.5;
+  }
+
+  h2 {
+    font-size: 32px;
+    text-align: center;
+  }
+
+  p {
+    text-align: center;
+  }
+
+  .project-link {
+    display: block;
+    text-align: center;
+    margin: 0 20px;
   }
 }
